--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,4 @@
 {
   "version": 2,
-  "name": "scalable-growth-systems",
-  "builds": [
-    { "src": "index.html", "use": "@vercel/static" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
-  ]
+  "name": "scalable-growth-systems"
 }
